--- a/2049/style/main.css
+++ b/2049/style/main.css
@@ -372,6 +372,14 @@ hr {
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
         font-size: 15px; } }
+    .tile.tile-evil .tile-inner {
+    color: #666666;
+    background: #cc99cc;
+    box-shadow: 0 0 30px 10px rgba(243, 128, 128, 0.55556), inset 0 0 0 1px rgba(255, 128, 128, 0.33333);
+    font-size: 35px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-evil .tile-inner {
+        font-size: 15px; } }
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
